--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,22 +17,12 @@ jobs:
           docker --version
           docker-compose --version
           echo "${GITHUB_REF}"
-      - name: Start services
-        run: |
-          make services
       - name: Build docker images
         run: |
-          make cached-build
-      - name: Install development dependencies
-        run: make dev
-      - name: Check formatting
-        run: make format-check
-      - name: Run linter (ruff)
-        run: make lint
-      - name: Run tests
-        run: make test
+          make build
+          # make cached-build
       - name: Push docker images (hash)
-        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')) && github.actor != 'dependabot[bot]'
+        # if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')) && github.actor != 'dependabot[bot]'
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
@@ -41,7 +31,7 @@ jobs:
           docker tag ghcr.io/investigativedata/ingest-file ghcr.io/investigativedata/ingest-file:cache
           docker push ghcr.io/investigativedata/ingest-file:cache
       - name: Push docker images for tags
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
           export TAG=${GITHUB_REF/refs\/tags\//}
           docker tag ghcr.io/investigativedata/ingest-file ghcr.io/investigativedata/ingest-file:${TAG};
