--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: package
 
 on:
-  push:
-  merge_group:
+  push: {}
+  workflow_dispatch: {}
 
 permissions:
   packages: write
@@ -12,33 +12,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up
-        run: |
-          docker --version
-          docker-compose --version
-          echo "${GITHUB_REF}"
-      - name: Build docker images
-        run: |
-          make build
-          # make cached-build
-      - name: Push docker images (hash)
-        # if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')) && github.actor != 'dependabot[bot]'
-        run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-
-          docker tag ghcr.io/alephdata/ingest-file ghcr.io/alephdata/ingest-file:${GITHUB_SHA}
-          docker push ghcr.io/alephdata/ingest-file:${GITHUB_SHA}
-          docker tag ghcr.io/alephdata/ingest-file ghcr.io/alephdata/ingest-file:cache
-          docker push ghcr.io/alephdata/ingest-file:cache
-      - name: Push docker images for tags
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        run: |
-          export TAG=${GITHUB_REF/refs\/tags\//}
-
-          docker tag ghcr.io/alephdata/ingest-file ghcr.io/alephdata/ingest-file:${TAG};
-          docker push ghcr.io/alephdata/ingest-file:${TAG};
-
-      - name: Tag latest image
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && !startsWith(github.ref, 'refs/tags/test-')
-        run: |
-          docker push ghcr.io/alephdata/ingest-file;
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/investigativedata/ingest-file
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=sha
+            type=raw,value=latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push release
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          # platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
