--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ normality==2.5.0
 pantomime==0.6.1
 followthemoney==3.5.9
 followthemoney-store[postgresql]==3.1.0
-servicelayer[google,amazon]==1.23.0
+servicelayer @ git+https://github.com/investigativedata/servicelayer.git
 languagecodes==1.1.1
 countrytagger==0.1.2
 pyicu==2.12
@@ -11,9 +11,10 @@ google-cloud-vision==3.7.2
 tesserocr==2.7.1
 spacy==3.6.1 # pinned because spacy 3.8 requires numpy >2 which breaks fasttext (see https://groups.google.com/g/fasttext-library/c/4EOM0-S6xHU)
 numpy<2.0.0 # pinned because otherwise spacy requires an incompatible numpy
-fingerprints==1.1.1
+fingerprints==1.2.3
 fasttext==0.9.2
 pika==1.3.2
+nomenklatura==3.15.2
 
 # Development
 pytest==8.2.0
@@ -28,7 +29,7 @@ rarfile==4.2
 xlrd==2.0.1
 openpyxl==3.1.2
 odfpy==1.4.1
-cchardet==2.1.7
+faust-cchardet==2.1.19
 lxml==5.0.0
 olefile==0.47
 Pillow==10.1.0
@@ -42,3 +43,4 @@ pymupdf==1.21.1
 
 prometheus-client==0.17.1
 sentry_sdk==2.0.1
+
