--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,9 @@ dependencies = [
     # servicelayer extras requirements
     "boto3 (>=1.11.9,<2.0.0)",
     "grpcio (>=1.32.0,<2.0.0)",
-    "google-cloud-storage (>=1.31.0,<3.0.0)"
+    "google-cloud-storage (>=1.31.0,<3.0.0)",
+    "faster-whisper (==1.1.1)",
+    "filelock (==3.17.0)"
 ]
 
 [project.scripts]
