--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 readme = "README.md"
 license = "AGPL-3.0"
-requires-python = ">=3.11,<4.0"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "banal (==1.0.6)",
     "normality (==2.5.0)",
@@ -22,10 +22,10 @@ dependencies = [
     "pyicu (==2.12)",
     "google-cloud-vision (==3.7.2)",
     "tesserocr (==2.7.1)",
-    "spacy (==3.6.1)",
+    "spacy[apple] (<3.8.0)",
     "numpy (<2.0)",
     "fingerprints (==1.2.3)",
-    "fasttext (==0.9.2)",
+    "fasttext-wheel (==0.9.2)",
     "pika (==1.3.2)",
     "nomenklatura (==3.15.2)",
     "dbf (==0.99.9)",
@@ -44,13 +44,15 @@ dependencies = [
     "icalendar (==5.0.12)",
     "cryptography (==41.0.7)",
     "requests[security] (==2.31.0)",
-    "pymupdf (==1.21.1)",
+    "pymupdf (==1.25.5)",
     "prometheus-client (==0.17.1)",
     "sentry_sdk (==2.0.1)",
     # servicelayer extras requirements
     "boto3 (>=1.11.9,<2.0.0)",
     "grpcio (>=1.32.0,<2.0.0)",
-    "google-cloud-storage (>=1.31.0,<3.0.0)"
+    "google-cloud-storage (>=1.31.0,<3.0.0)",
+    # make poetry install work
+    "srsly (==2.5.1)",
 ]
 
 [project.scripts]
