--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/dataresearchcenter/ingest-file
+          images: ghcr.io/openaleph/ingest-file
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
             type=sha
+            type=raw,value=latest
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -51,8 +52,8 @@ jobs:
           context: .
           platforms: linux/amd64
           load: true
-          cache-from: type=registry,ref=ghcr.io/dataresearchcenter/ingest-file:cache
-          cache-to: type=registry,ref=ghcr.io/dataresearchcenter/ingest-file:cache,mode=max
+          cache-from: type=registry,ref=ghcr.io/openaleph/ingest-file:cache
+          cache-to: type=registry,ref=ghcr.io/openaleph/ingest-file:cache,mode=max
 
       - name: Start services
         run: |
@@ -79,5 +80,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/dataresearchcenter/ingest-file:cache
-          cache-to: type=registry,ref=ghcr.io/dataresearchcenter/ingest-file:cache,mode=max
+          cache-from: type=registry,ref=ghcr.io/openaleph/ingest-file:cache
+          cache-to: type=registry,ref=ghcr.io/openaleph/ingest-file:cache,mode=max
